Fix visibility for ST breakpoint properties in context menu

--- a/plugins/org.eclipse.fordiac.ide.debug.ui.st/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.debug.ui.st/plugin.xml
@@ -110,6 +110,9 @@
                commandId="org.eclipse.fordiac.ide.debug.ui.st.breakpointProperties"
                label="Breakpoint Properties..."
                style="push">
+            <visibleWhen
+                  checkEnabled="true">
+            </visibleWhen>
          </command>
       </menuContribution>
    </extension>
