--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.xml
@@ -391,12 +391,15 @@
             activeByDefault="true"
             contentProvider="org.eclipse.fordiac.ide.systemmanagement.ui.providers.SystemExplorerRootContentProvider"
             id="org.eclipse.fordiac.ide.systemmanagement.ui.systemexplorer.rootcontent"
-            labelProvider="org.eclipse.fordiac.ide.systemmanagement.ui.systemexplorer.SystemExplorerLabelProvider"
+            labelProvider="org.eclipse.fordiac.ide.systemmanagement.ui.systemexplorer.SystemExplorerRootLabelProvider"
             name="System Content"
             priority="high">
             <possibleChildren>
                  <instanceof value="org.eclipse.core.resources.IProject"/>                 
 	        </possibleChildren> 
+	        <triggerPoints>
+            	<instanceof value="org.eclipse.core.resources.IWorkspaceRoot" />
+         	</triggerPoints>
        </navigatorContent>
         <navigatorContent
               activeByDefault="true"
